# MarkProof

./: .gitignore  CLAUDE.md  Makefile  README.md  action.yml  markproof.toml  pyproject.toml
.github/workflows/: markproof.yml  release.yml  test-action.yml  use-action.yml
docs/: architecture.md  configuration.md  executor.md  generator.md  github-action.md  markproof.toml  parser.md
examples/async_api_client/: README.md
examples/data_pipeline/: README.md
examples/getting_started/: README.md  markproof.toml
src/markproof/: __init__.py  cli.py  config.py  executor.py  generator.py  models.py  parser.py
tests/: test_cli.py  test_executor.py  test_parser.py
tests/functional/: test_functional.py
tests/functional/fixtures/failing/: 01_name_error.md  02_type_error.md  03_assertion_error.md  04_import_error.md  05_continues_after_error.md  06_syntax_error.md  07_attribute_error.md  08_runtime_error.md  09_key_error.md  10_index_error.md  11_async_exception.md  12_second_block_uses_failed_name.md  13_zero_division.md  14_value_error.md
tests/functional/fixtures/passing/: 01_simple_print.md  02_cumulative_state.md  03_function_across_blocks.md  04_import_persistence.md  05_skip_annotated.md  06_install_blocks_skipped.md  07_async_await.md  08_mixed_languages.md  09_async_cross_block.md  10_class_across_blocks.md  11_exception_handled_internally.md  12_no_code_blocks.md  13_unlabelled_block_skipped.md  14_tilde_fence.md  15_multiple_skips.md  16_stdout_isolation.md  17_python3_label.md  18_metadata_cleared_by_prose.md  19_deeply_nested_data.md  20_async_exception_caught.md
tests/unit/: test_cli.py  test_executor.py  test_generator.py  test_parser.py
