[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "markproof"
dynamic = ["version"]
description = "A CLI tool for markdown linting and validation"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.scripts]
markproof = "markproof.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pyfakefs>=5.0",
    "ruff>=0.4",
    "ty>=0.0.26",
]

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"

[tool.hatch.build.hooks.vcs]
version-file = "src/markproof/_version.py"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/functional"]
